crates/rome_formatter/tests/specs/prettier/record/shorthand.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: shorthand.js

---
# Input
```js
const url = "https://github.com/tc39/proposal-record-tuple";
const record = #{ url }
console.log(record.url) // https://github.com/tc39/proposal-record-tuple

```

# Output
```js
const url = "https://github.com/tc39/proposal-record-tuple";

const record = #
{
  url;
}
console.log(
  record.url,
); // https://github.com/tc39/proposal-record-tuple

```

# Errors
```
error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ shorthand.js:2:17
  │
2 │ const record = #{ url }
  │                 ^ unexpected


```


